--- a/ClassSchedulingProject/Views/Home/Index.cshtml
+++ b/ClassSchedulingProject/Views/Home/Index.cshtml
@@ -12,26 +12,44 @@
     }
 }
 
-<div style="padding-left: 20px; overflow:hidden">
+<div class="popup">
+
+</div>
+
+<div style="padding-left: 20px; overflow:hidden; max-width: 1040px">
     <div class="row">
         <div class="col">
             <h2>@thisUser.PrimaryInstitution.InstitutionName</h2>
             <div>
-                <select id="yearSel" class="custom-select-sm" style="margin-top: 25px; margin-bottom: 25px;" onchange="">
+                <select id="yearSel" class="custom-select-sm" style="margin-top: 25px; margin-bottom: 25px;" onchange="fetchNewCalendar(this)">
                   <option selected>Select Year</option>
                     @foreach(int year in AvailableYears)
                     {
                         <option value="@year">@year</option>
                     }
                 </select>
-                <select id="qSel" class="custom-select-sm" style="margin-top: 25px; margin-bottom: 25px;" onchange="">
+                <select id="qSel" class="custom-select-sm" style="margin-top: 25px; margin-bottom: 25px;" onchange="fetchNewCalendar(this)">
                   <option selected>Select Quarter</option>
                   <option value="1">Winter</option>
                   <option value="2">Spring</option>
                   <option value="3">Summer</option>
                   <option value="4">Fall</option>
                 </select>
+                <select id="building" class="custom-select-sm" style="margin-bottom: 25px;" onchange="fetchNewCalendar(this)">
+                  <option selected>Select Building</option>
+                  <option value="J">J</option>
+                </select>
+                <select id="room" class="custom-select-sm" style="margin-bottom: 25px;" onchange="fetchNewCalendar(this)">
+                  <option selected>Select Room</option>
+                  <option value="108">108</option>
+                  <option value="111">111</option>
+                  <option value="112">112</option>
+                  <option value="114">114</option>
+                </select>
             </div>
+@*            <div>
+
+            </div>*@
         </div>
         <div class="col">
             <div style="position:absolute; right: 30px; bottom: 10px;">
@@ -40,7 +58,7 @@
             </div>
         </div>
     </div>
-    <div style="height: calc(100vh - 200px); width:calc(100% + 20px)" class="row">
+    <div style="height: calc(100vh - 200px); max-width:1040px" class="row">
         <div class="col">
             <div id='calendar'></div>
         </div>
@@ -67,19 +85,84 @@ body {
 .fc-v-event {
     background-color: rgba(23, 34, 54,.4);
 }
+.popup {
+    position: relative;
+
+}
 </style>
 <script>
+let elements = {}
 let caldata = {
     firstName: "@thisUser.FirstName",
     lastName: "@thisUser.LastName",
     userAccountID : "@thisUser.AccountHash",
-    events : `@ViewBag.institutionEvents`
 }
 document.addEventListener('DOMContentLoaded', function () {
-    fetch(`/home/fetchEvents?institutionID=@thisUser.PrimaryInstitutionId`).then(response => response.json()).then((data) => {
-        console.log(data);
-        caldata.events = data;
-        newCalender = new CalenderApp(caldata);
-    });
+    elements = {
+        year: $("#yearSel"),
+        quarter: $("#qSel"),
+        building: $("#building"),
+        room: $("#room"),
+        checkNull : function() {
+                if (this.year.val() === "Select Year"
+                    || this.quarter.val() === "Select Quarter"
+                    || this.building.val() === "Select Building"
+                    || this.room.val() === "Select Room") {
+                    return false;
+                }
+                return true;
+            },
+        setItemsFromLocalStorage: function() {
+                if (localStorage.getItem(this.year.attr('id'))) {
+                    this.year.val(localStorage.getItem(this.year.attr('id')));
+                }
+                if (localStorage.getItem(this.quarter.attr('id'))) {
+                    this.quarter.val(localStorage.getItem(this.quarter.attr('id')));
+                }
+                if (localStorage.getItem(this.building.attr('id'))) {
+                    this.building.val(localStorage.getItem(this.building.attr('id')));
+                }
+                if (localStorage.getItem(this.room.attr('id'))) {
+                    this.room.val(localStorage.getItem(this.room.attr('id')));
+                }
+            }
+        }
+    elements.setItemsFromLocalStorage();
+    newCalender = new CalenderApp(caldata);
+    fetchData(new Object);
+    //updateTimer(.5 * 1000);
 });
+
+function updateTimer(delay) {
+    setTimeout(function () {
+        if (elements.checkNull() && newCalender.isActive === 0) {
+            fetchData(new Object);
+        }
+        updateTimer(delay);
+    }, delay);
+}
+
+function fetchData(e) {
+    try {
+        localStorage.setItem(e.id, e.value);
+    } catch {
+    }
+    if (!elements.checkNull()) {
+            return createCalender(caldata);
+        }
+    let filterterms = `${elements.year.val()},${elements.quarter.val()},${elements.building.val()},${elements.room.val()}`;
+    console.log(filterterms);
+    fetch(`/home/fetchEvents?filterterms=${filterterms}`).then(response => response.json()).then((data) => {
+        if (newCalender.init === 0) {
+            newCalender.parseEvents(data);
+            createCalender(newCalender.data.events);
+        } else {
+            newCalender.updateEvents(data);
+        }
+    });
+}
+function fetchNewCalendar(element) {
+    newCalender = new CalenderApp(caldata);
+    fetchData(element);
+}
 </script>
