calender now updates every x amount of intervals

--- a/ClassSchedulingProject/Views/Home/Index.cshtml
+++ b/ClassSchedulingProject/Views/Home/Index.cshtml
@@ -130,7 +130,7 @@ document.addEventListener('DOMContentLoaded', function () {
     elements.setItemsFromLocalStorage();
     newCalender = new CalenderApp(caldata);
     fetchData(new Object);
-    //updateTimer(.5 * 1000);
+    updateTimer(5 * 1000);
 });
 
 function updateTimer(delay) {
