some code refactoring. going to dedicate rest of the day to clean up

--- a/ClassSchedulingProject/Views/Home/Index.cshtml
+++ b/ClassSchedulingProject/Views/Home/Index.cshtml
@@ -72,7 +72,7 @@
                 <div id="filteredEvents"></div>
             </div>
             <br />
-            <div class="accordion" id="accordionAllEvents">
+            <div class="accordion" id="accordionEventList">
                 <div id="allEvents"></div>
             </div>
             <br />
